--- a/resources/sass/_buttons.scss
+++ b/resources/sass/_buttons.scss
@@ -79,7 +79,7 @@
         border-radius: 30px;
         font-size: 0.875rem;
         color: #fff;
-        padding: 12px 25px;
+        padding: 12px;
         @include anima-slow;
 
         &:hover {
@@ -97,7 +97,7 @@
         border-radius: 30px;
         font-size: 0.875rem;
         color: #fff;
-        padding: 12px 25px;
+        padding: 12px;
         @include anima-slow;
 
         &:hover {
