--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12201,6 +12201,7 @@ form .activeLabel label {
   position: fixed;
   display: block;
   z-index: 200;
+  overflow-y: auto !important;
 }
 .content__dashboard .activeSidebar .arrow_back {
   display: flex;
